# weather-station

./: CMakeLists.txt  README.md  WeatherStationWindows.cpp  WeatherStationWindows.h  WeatherStationWindows.ui  main.cpp  weather_station_ru_RU.ts
clocks/: Clock.cpp  Clock.h
config_writer/: Config.cpp  Config.h
config_writer/conf/: config.xml
script/: sensors.sh
sensor/: SensorController.cpp  SensorController.h
